# NetEase_Meeting

./: .gitignore  README.md
meeting-qt/: .clang-tidy  .cmake-format.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  PACKAGE_UPDATE_VERSION.py  README.md  THIRD_PARTY_COPYRIGHT.txt  conanfile.py  deploy_mac.sh  deploy_win.bat  deploy_win_x64.bat  meeting-sdk-desktop.pro  requirements.txt
meeting-qt/.cmake/: GetGitRevisionDescription.cmake  MacOSXFrameworkInfo.plist.in  PlatformSettings.cmake  Win32Codesign.cmake  conan.cmake  version.rc.in
meeting-qt/.profiles/: darwin-arm64  darwin-x86_64
meeting-qt/build_tool/mac/: build-macx.sh  third_party_deploy.sh
meeting-qt/build_tool/win/: backup.bat  build_win32.bat  third_party_deploy.bat
meeting-qt/meeting/: .gitignore  .gitmodules  CHANGELOG.md  README.md  deploy_mac.sh  deploy_win.bat  deploy_xkit.py
meeting-qt/meeting-app/: CHANGELOG.md  Info.plist  app_dump.h  main.cpp  main.qml  meeting-app.pro  meeting-app_zh_CN.ts  meeting_app.cpp  meeting_app.h  qml.qrc  stable.h  version.h
meeting-qt/meeting-app/base/: log_instance.cpp  log_instance.h
meeting-qt/meeting-app/components/: macxhelper.h  macxhelper.mm  urs_jsBridge.cpp
meeting-qt/meeting-app/modules/: auth_manager.cpp  auth_manager.h  client_updator.cpp  client_updator.h  commandline_parser.cpp  commandline_parser.h  config_manager.cpp  config_manager.h  database_manager.cpp  feedback_manager.cpp  feedback_manager.h  history_manager.cpp  history_manager.h  local_socket.cpp  local_socket.h  nemeeting_sdk_manager.cpp  nemeeting_sdk_manager.h  statistics_manager.cpp  statistics_manager.h  sys_info.cpp  sys_info.h
meeting-qt/meeting-app/qml/: AnonJoinPage.qml  AnonJoinPageForm.ui.qml  ChangePasswordPage.qml  ChangePasswordPageForm.ui.qml  FrontPage.qml  FrontPageForm.ui.qml  HomePage.qml  HomePageForm.ui.qml  LoginWithAuthCode.qml  LoginWithAuthCodeForm.ui.qml  LoginWithCode.qml  LoginWithCodeForm.ui.qml  LoginWithPassword.qml  LoginWithPasswordForm.ui.qml  LoginWithSSO.qml  LoginWithSSOForm.ui.qml  RegisterPage.qml  RegisterPageForm.ui.qml  UrsLoginPage.qml
meeting-qt/meeting-app/utils/: clipboard.cpp  clipboard.h  invoker.h  zipper.cpp  zipper.h
meeting-qt/meeting-ipc/: build_macx.sh  build_win32.bat
meeting-qt/meeting-ipc/doc/: NEMeeting SDK.Doxyfile  NEMeeting SDK.chm - 快捷方式.lnk
meeting-qt/meeting-ipc/nem_hosting_module/: CMakeLists.txt
meeting-qt/meeting-ipc/nem_hosting_module_client/: CMakeLists.txt  nem_hosting_module_client.cpp
meeting-qt/meeting-ipc/nem_hosting_module_core/: CMakeLists.txt
meeting-qt/meeting-ipc/nem_hosting_module_protocol/: CMakeLists.txt
meeting-qt/meeting-ipc/nem_sdk_interface/: account_service.h  auth_service.h  build_config.h  callback_interface.h  controller_define.h  error.h  exception.h  exception_define.h  feedback_service.h  meeting.h  meeting_sdk.h  meeting_service.h  metting.h  nemeeting_sdk_interface_export.h  nemeeting_sdk_interface_include.h  premeeting_service.h  public_define.h  sdk_init_config.h  sdk_introduction.h  service_define.h  setting_service.h  settings.h
meeting-qt/meeting-ipc/nem_sdk_interface_ipc_client/: client_account_service.h  client_auth_service.h  client_feedback_service.h  client_meeting_sdk.h  client_meeting_service.h  client_nemeeting_sdk_interface_include.h  client_premeeting_service.h  client_prochandler_define.h  client_setting_service.h
meeting-qt/meeting-ipc/nipclib/: CMakeLists.txt  nipclib_export.h
meeting-qt/meeting-ipc/output/: nem_ipc_module.sln
meeting-qt/meeting-sample/: build-macx.sh  main.cpp  meeting-sample.pro  nemeeting_manager.cpp  nemeeting_manager.h  qml.qrc  qtquickcontrols2.conf
meeting-qt/meeting-sample/qml/: Front.qml  Login.qml  Toast.qml  main.qml
meeting-qt/meeting-ui-sdk/: Info.plist  app_dump.h  main.cpp  meeting-ui-sdk.pro  meeting-ui-sdk_zh_CN.ts  nemeeting_instance.cpp  nemeeting_instance.h  qml.qrc  qtquickcontrols2.conf  stable.h  version.h
meeting-qt/meeting-ui-sdk/base/: log_instance.cpp
meeting-qt/meeting-ui-sdk/components/: auth_checker.h  auth_checker.mm  clipboard.cpp  macx_helpers.h  macx_helpers.mm  mouse_event_spy.cpp  mouse_event_spy.h  screensaver.cpp  screensaver.h  screensaver.mm  whiteboard_jsBridge.cpp  whiteboard_jsBridge.h  windows_helpers.cpp  windows_helpers.h
meeting-qt/meeting-ui-sdk/controller/: audio_controller.cpp  audio_controller.h  auth_controller.cpp  config_controller.cpp  config_controller.h  meeting_controller.cpp  meeting_controller.h  premeeting_controller.cpp  premeeting_controller.h  screenshare_controller.cpp  sip_controller.cpp  subscribe_helper.cpp  user_controller.cpp  user_controller.h  video_controller.h
meeting-qt/meeting-ui-sdk/ipc_handlers/: account_prochandler.cpp  account_prochandler.h  auth_prochandler.cpp  auth_prochandler.h  feedback_prochandler.cpp  feedback_prochandler.h  hosting_module_client.cpp  hosting_module_client.h  meeting_prochandler.cpp  meeting_prochandler.h  meeting_sdk_prochandler.cpp  meeting_sdk_prochandler.h  premeeting_prochandler.cpp  premeeting_prochandler.h  setting_prochandler.cpp  setting_prochandler.h
meeting-qt/meeting-ui-sdk/listeners/: meeting_service_listener.cpp  meeting_service_listener.h  meeting_stats_listener.cpp  meeting_stats_listener.h  roomkit_listener.cpp  roomkit_listener.h
meeting-qt/meeting-ui-sdk/manager/: auth_manager.cpp  auth_manager.h  chat_manager.cpp  chat_manager.h  config_manager.cpp  config_manager.h  device_manager.cpp  device_manager.h  feedback_manager.cpp  feedback_manager.h  global_manager.cpp  global_manager.h  live_manager.cpp  live_manager.h  meeting_manager.cpp  meeting_manager.h  more_item_manager.cpp  more_item_manager.h  pre_meeting_manager.cpp  pre_meeting_manager.h  settings_manager.cpp  settings_manager.h
meeting-qt/meeting-ui-sdk/models/: device_model.cpp  device_model.h  invite_model.cpp  invite_model.h  live_members_model.cpp  (+9 more)
meeting-qt/other_licenses/: libyuv_LICENSE.txt
meeting-qt/setup/: setup_def.h  setup_yixin.sln  target_def.h
(+3101 files in other folders)
